traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:32: error: ';' expected but '=' found.
    diagc:Int=diagc+1
             ^